# rfbid-tool

./: .gitignore  MANIFEST.in  README.md  environment.yaml  pyproject.toml
rfbid/: __init__.py  cli.py  core.py
